# Cigale-O-Synth

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/: project_settings.cmake
cmake/toolchains/: arm-cortex-m0p-gcc.cmake  arm-cortex-m4f-gcc.cmake
misc/openocd_scripts/: stm32g0xx_stlink.cfg  stm32g4xx_stlink.cfg
misc/svd/: stm32g0b1.svd
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/blinky/: CMakeLists.txt  initialize.h  interrupts.cpp  main.cpp
src/app/blinky/peripherals/: nucleo64.h
src/app/thermocouple/: CMakeLists.txt  main.cpp
src/hal/abstract/: CMakeLists.txt
src/hal/abstract/hal/: dma.h  peripheral.h  uart.h
src/hal/impl/: CMakeLists.txt
src/hal/impl/stm32g0/: dma.cpp  dma.h  interrupts.h  peripheral_ids.h  uart.cpp  uart.h
